Fixed title wrap in square link cards

--- a/src/components/(Design)/components/StyledLinkCard/styles.module.css
+++ b/src/components/(Design)/components/StyledLinkCard/styles.module.css
@@ -43,6 +43,7 @@
 	justify-content: center;
 	align-items: center;
 	word-break: break-all;
+	width: 100%;
 }
 .hoverTitleContainer {
 	position: absolute;
